--- a/svg_lines_v3.htm
+++ b/svg_lines_v3.htm
@@ -3,11 +3,11 @@
 <head>
 <style>
 #myDIV {
-    --p1: grey; /* grey */
+    --p1: #808080; /* grey */
     --p2: #ffffff; /* white */
     --p3: #0000ff; /* blue */
-    --p4: yellow; /* yellow */
-    --p5: green; /* green */
+    --p4: #ffff00; /* yellow */
+    --p5: #008000; /* green */
     --p6: #ff0000; /* red */
   color: var(--p1);
   background-color: var(--p2);
