--- a/svg_stairs_v1.htm
+++ b/svg_stairs_v1.htm
@@ -3,13 +3,12 @@
 <head>
 <style>
 #myDIV {
-    --p1: grey; /* grey */
+    --p1: #808080; /* grey */
     --p2: #ffffff; /* white */
     --p3: #0000ff; /* blue */
-    --p4: yellow; /* yellow */
-    --p5: green; /* green */
+    --p4: #ffff00; /* yellow */
+    --p5: #008000; /* green */
     --p6: #ff0000; /* red */
-    --p7: #000000; /* black */
     
     --b1: 0.5;
     --b2: 2;
