--- a/svg_stairs_v1.htm
+++ b/svg_stairs_v1.htm
@@ -10,8 +10,8 @@
     --p5: #008000; /* green */
     --p6: #ff0000; /* red */
     
-    --b1: 0.5;
-    --b2: 2;
+    --b1: 0.5; /* thin lines */
+    --b2: 2; /* thick lines */
     
   color: var(--p1);
   background-color: var(--p2);
